# rust_percolation

./: .gitignore  Cargo.toml  README.md  pyproject.toml
examples/: comparison.py  percolation.py  plot.py  unionfind.py
src/: lib.rs  unionfind.rs
